grammars/tree-sitter-eu4/test/corpus/errors.txt
==================
Incomplete input recovers
==================
broken = {
  text = "unterminated
  next = value
---

(source_file
  (ERROR
    (key
      (bare_scalar))
    (operator)
    (property
      key: (key
        (bare_scalar))
      operator: (operator)
      value: (value
        (quoted_string
          (MISSING """))))
    (property
      key: (key
        (bare_scalar))
      operator: (operator)
      value: (value
        (bare_value
          (bare_scalar))))))

==================
Incomplete operator recovers
==================
broken <
---

(source_file
  (property
    key: (key
      (bare_scalar))
    operator: (operator)
    value: (value
      (bare_value
        (MISSING bare_scalar)))))
